[gd_scene load_steps=18 format=3 uid="uid://dbymkh7j848g6"]

[ext_resource type="Script" path="res://Scene/scene_temp_lv2.gd" id="1_nf7cv"]
[ext_resource type="Texture2D" uid="uid://c5mfh4kodemhe" path="res://Asset/station-CN.png" id="2_5njt6"]
[ext_resource type="Texture2D" uid="uid://dyvydgy63wsqg" path="res://Asset/railway.png" id="3_5djbo"]
[ext_resource type="Texture2D" uid="uid://cmfs0bm2b5l4" path="res://Asset/TopTube.png" id="4_lli5x"]
[ext_resource type="PackedScene" uid="uid://bk78dyrnv1j83" path="res://Player/player_level1.tscn" id="5_pbcnt"]
[ext_resource type="Texture2D" uid="uid://7rux2j2bvag" path="res://Asset/triangle.png" id="6_b7gpn"]
[ext_resource type="Texture2D" uid="uid://b31jv117h6esl" path="res://Asset/light.png" id="7_s5l40"]
[ext_resource type="Script" path="res://Char/PointLightBlink.gd" id="8_wmxmw"]
[ext_resource type="PackedScene" uid="uid://blklt6bq1bke8" path="res://Char/passengersquare.tscn" id="9_u34p3"]
[ext_resource type="AudioStream" uid="uid://fuo0235r84b1" path="res://Sound/Metro.mp3" id="10_nl3ma"]
[ext_resource type="PackedScene" uid="uid://ddfctowlogfba" path="res://Player/circleNPC.tscn" id="11_8n8e4"]
[ext_resource type="Texture2D" uid="uid://dx7oep64v04ex" path="res://Asset/chinese-sign.png" id="13_eax3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plcb6"]
size = Vector2(20, 21.3334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf77w"]
size = Vector2(2475.33, 246)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6gtb"]
size = Vector2(159.333, 484.334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1wmj"]
size = Vector2(122, 446)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xb07"]
size = Vector2(102, 124.667)

[node name="SceneTemp" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_nf7cv")

[node name="Platform" type="Node2D" parent="."]
position = Vector2(-750.667, 87.3333)

[node name="Platform1" type="Sprite2D" parent="Platform"]
z_index = -3
position = Vector2(385, 316)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5njt6")

[node name="Platform2" type="Sprite2D" parent="Platform"]
z_index = -3
position = Vector2(1406.67, 316)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5njt6")

[node name="Platform3" type="Sprite2D" parent="Platform"]
z_index = -3
position = Vector2(2431.33, 316)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5njt6")

[node name="Platform4" type="Sprite2D" parent="Platform"]
z_index = -4
position = Vector2(385.167, 137.1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5njt6")

[node name="Platform5" type="Sprite2D" parent="Platform"]
z_index = -4
position = Vector2(1406.84, 137.1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5njt6")

[node name="Platform6" type="Sprite2D" parent="Platform"]
z_index = -4
position = Vector2(2431.5, 137.1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5njt6")

[node name="ParallaxBackgroundLow" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackgroundLow"]
motion_scale = Vector2(0.6, 0.6)

[node name="Node2D" type="Node2D" parent="ParallaxBackgroundLow/ParallaxLayer1"]
position = Vector2(-796, 960)
scale = Vector2(1, 0.75)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Railway1" type="Sprite2D" parent="ParallaxBackgroundLow/ParallaxLayer1/Node2D"]
modulate = Color(0.243137, 0.243137, 0.243137, 1)
texture = ExtResource("3_5djbo")

[node name="Railway2" type="Sprite2D" parent="ParallaxBackgroundLow/ParallaxLayer1/Node2D"]
modulate = Color(0.243137, 0.243137, 0.243137, 1)
position = Vector2(1793, -9.53674e-07)
texture = ExtResource("3_5djbo")

[node name="Railway3" type="Sprite2D" parent="ParallaxBackgroundLow/ParallaxLayer1/Node2D"]
modulate = Color(0.243137, 0.243137, 0.243137, 1)
position = Vector2(3575, 0)
texture = ExtResource("3_5djbo")

[node name="ParallaxBackgroundHigh" type="ParallaxBackground" parent="."]
layer = 100
visible = false

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackgroundHigh"]
position = Vector2(-684, 164)
motion_scale = Vector2(2, 2)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="TopTube1" type="Sprite2D" parent="ParallaxBackgroundHigh/ParallaxLayer1"]
modulate = Color(1, 1, 1, 0.117647)
z_index = 1
position = Vector2(-543, 648)
scale = Vector2(5, 5)
texture = ExtResource("4_lli5x")

[node name="TopTube2" type="Sprite2D" parent="ParallaxBackgroundHigh/ParallaxLayer1"]
modulate = Color(1, 1, 1, 0.117647)
z_index = 1
position = Vector2(1518, 646)
scale = Vector2(5, 5)
texture = ExtResource("4_lli5x")

[node name="TopTube3" type="Sprite2D" parent="ParallaxBackgroundHigh/ParallaxLayer1"]
modulate = Color(1, 1, 1, 0.117647)
z_index = 1
position = Vector2(3446, 644)
scale = Vector2(5, 5)
texture = ExtResource("4_lli5x")

[node name="PlayerLevel1" parent="." instance=ExtResource("5_pbcnt")]
position = Vector2(19.3333, 480)
mass = 5.0
move_speed = 5000.0
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="PlayerLevel1"]
limit_bottom = 1080

[node name="PointLight2D4" type="PointLight2D" parent="PlayerLevel1"]
visible = false
scale = Vector2(1.5, 1.5)
color = Color(1, 1, 0.8, 1)
energy = 0.65
texture = ExtResource("7_s5l40")

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(88.6667, 532.667)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_plcb6")
disabled = true

[node name="Triangle" type="Sprite2D" parent="Area2D"]
visible = false
position = Vector2(10, -75)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("6_b7gpn")

[node name="LightSys" type="Node2D" parent="."]
visible = false

[node name="PointLight2D1" type="PointLight2D" parent="LightSys"]
position = Vector2(-164, 414.667)
scale = Vector2(4, 4)
texture = ExtResource("7_s5l40")

[node name="PointLight2D2" type="PointLight2D" parent="LightSys"]
position = Vector2(351.333, 542.667)
scale = Vector2(4, 4)
texture = ExtResource("7_s5l40")

[node name="PointLight2D3" type="PointLight2D" parent="LightSys"]
visible = false
position = Vector2(753.333, 449.333)
scale = Vector2(2, 2)
texture = ExtResource("7_s5l40")
offset = Vector2(57.3333, 63.8333)
script = ExtResource("8_wmxmw")

[node name="Timer" type="Timer" parent="LightSys/PointLight2D3"]
wait_time = 0.6
autostart = true

[node name="PointLight2D5" type="PointLight2D" parent="LightSys"]
position = Vector2(693.333, 386.667)
scale = Vector2(4, 4)
texture = ExtResource("7_s5l40")

[node name="PointLight2D6" type="PointLight2D" parent="LightSys"]
position = Vector2(1225.33, 432.667)
scale = Vector2(4, 4)
texture = ExtResource("7_s5l40")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[node name="PassengerMovingSys" type="Node" parent="."]

[node name="PassengerStaticSys" type="Node" parent="."]

[node name="PassengerSquare" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-20, 829)
stand = true

[node name="PassengerSquare3" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(22, 773)
stand = true

[node name="PassengerSquare4" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(109, 796)
stand = true

[node name="PassengerSquare2" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-85, 750)
stand = true

[node name="PassengerSquare5" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-237, 638)
stand = true

[node name="PassengerSquare6" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-177, 710)
stand = true

[node name="PassengerSquare7" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-91, 665)
stand = true

[node name="PassengerSquare8" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-257, 526)
stand = true

[node name="PassengerSquare9" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-335, 605)
stand = true

[node name="PassengerSquare10" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-451, 551)
stand = true

[node name="PassengerSquare11" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-560, 592)
stand = true

[node name="PassengerSquare12" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-538, 499)
stand = true

[node name="PassengerSquare13" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-351, 438)
stand = true

[node name="PassengerSquare14" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(1.99994, 563)
stand = true

[node name="PassengerSquare15" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(206, 726)
stand = true

[node name="PassengerSquare16" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(206, 599)
stand = true

[node name="PassengerSquare17" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(105, 659)
stand = true

[node name="PassengerSquare18" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-132, 535)
stand = true

[node name="PassengerSquare19" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-180, 406)
stand = true

[node name="PassengerSquare20" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-650, 721)
stand = true

[node name="PassengerSquare21" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-637, 640)
stand = true

[node name="PassengerSquare22" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-428, 705)
stand = true

[node name="PassengerSquare23" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(347, 749)
stand = true

[node name="PassengerSquare24" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(476, 798)
stand = true

[node name="PassengerSquare25" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(488, 652)
stand = true

[node name="PassengerSquare26" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(577, 697)
stand = true

[node name="PassengerSquare27" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(732, 588)
stand = true

[node name="PassengerSquare28" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(902, 759)
stand = true

[node name="PassengerSquare29" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(1031, 684)
stand = true

[node name="PassengerSquare36" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(769, 691)
stand = true

[node name="PassengerSquare37" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(818, 463)
stand = true

[node name="PassengerSquare38" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(477, 509)
stand = true

[node name="PassengerSquare39" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(344, 593)
stand = true

[node name="PassengerSquare40" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(1212, 595)
stand = true

[node name="PassengerSquare41" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(1035, 452)
stand = true

[node name="PassengerSquare42" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(604, 367)
stand = true

[node name="PassengerSquare43" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(344, 367)
stand = true

[node name="PassengerSquare44" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(192, 398)
stand = true

[node name="PassengerSquare45" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(261, 497)
stand = true

[node name="PassengerSquare46" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(-90.9999, 277)
stand = true

[node name="PassengerSquare47" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(213, 228)
stand = true

[node name="PassengerSquare48" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(461, 311)
stand = true

[node name="PassengerSquare49" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(768, 276)
stand = true

[node name="PassengerSquare50" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(957, 363)
stand = true

[node name="PassengerSquare51" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(653, 526)
stand = true

[node name="PassengerSquare52" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(653, 526)
stand = true

[node name="PassengerSquare30" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(1074, 603)
stand = true

[node name="PassengerSquare31" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(961, 614)
stand = true

[node name="PassengerSquare32" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(859, 650)
stand = true

[node name="PassengerSquare33" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(1128, 755)
stand = true

[node name="PassengerSquare34" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(799, 780)
stand = true

[node name="PassengerSquare35" parent="PassengerStaticSys" instance=ExtResource("9_u34p3")]
position = Vector2(670, 780)
stand = true

[node name="GenerateTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_nl3ma")
autoplay = true

[node name="WallSys" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Wall1" type="StaticBody2D" parent="WallSys"]
position = Vector2(32.6667, 630.667)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallSys/Wall1"]
position = Vector2(223.667, 106.333)
shape = SubResource("RectangleShape2D_kf77w")

[node name="Wall2" type="StaticBody2D" parent="WallSys"]
position = Vector2(47.3333, -98.6667)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallSys/Wall2"]
position = Vector2(223.667, 106.333)
shape = SubResource("RectangleShape2D_kf77w")

[node name="Wall3" type="StaticBody2D" parent="WallSys"]
position = Vector2(-902, 512.667)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallSys/Wall3"]
position = Vector2(0, -141.167)
shape = SubResource("RectangleShape2D_j6gtb")

[node name="CircleNPC" parent="." instance=ExtResource("11_8n8e4")]
z_index = 5
position = Vector2(-400, 560)

[node name="ActionLockTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="EndZone" type="Area2D" parent="."]
position = Vector2(892.667, 478)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone"]
position = Vector2(24.3333, -109.667)
shape = SubResource("RectangleShape2D_g1wmj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ExitSign1" type="Sprite2D" parent="."]
position = Vector2(-289.569, 154.917)
scale = Vector2(0.385714, 0.385714)
texture = ExtResource("13_eax3n")

[node name="ExitSign2" type="Sprite2D" parent="."]
position = Vector2(250.431, 159.584)
scale = Vector2(0.385714, 0.385714)
texture = ExtResource("13_eax3n")

[node name="ExitSign3" type="Sprite2D" parent="."]
position = Vector2(792, 162.667)
scale = Vector2(0.385714, 0.385714)
texture = ExtResource("13_eax3n")

[node name="ExitSign4" type="Sprite2D" parent="."]
position = Vector2(924.667, 366)
scale = Vector2(0.385714, 0.385714)
texture = ExtResource("13_eax3n")

[node name="Area2D2" type="Area2D" parent="."]
visible = false
position = Vector2(-197.333, 541.333)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(17, -1)
shape = SubResource("RectangleShape2D_6xb07")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LightSys/PointLight2D3/Timer" to="LightSys/PointLight2D3" method="_on_timer_timeout"]
[connection signal="timeout" from="GenerateTimer" to="." method="_on_generate_timer_timeout"]
[connection signal="timeout" from="ActionLockTimer" to="." method="_on_action_lock_timer_timeout"]
[connection signal="body_entered" from="EndZone" to="." method="_on_end_zone_body_entered"]
